--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/beauty_of_java
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
