--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.open-in-view=false
+spring.mvc.log-resolved-exception=false
+logging.file.name=logs${file.separator}logger.log
+logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss}] %-5level - %msg%n
+logging.pattern.file=[%d{yyyy-MM-dd HH:mm:ss}] %-5level - %msg%n
