--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.7</version>
+                <configuration>
+                    <excludes>
+                        <exclude>com/myapp/backend/repository/HistoryTranslationRepository.class</exclude>
+                        <exclude>com/myapp/backend/repository/TagRepository.class</exclude>
+                        <exclude>com/myapp/backend/repository/TranslatorRepository.class</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
