--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,16 @@
             <artifactId>swagger-annotations</artifactId>
             <version>2.2.20</version>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -90,14 +96,6 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.7</version>
                 <configuration>
-                    <excludes>
-                        <exclude>com/myapp/backend/repository/HistoryTranslationRepository.class</exclude>
-                        <exclude>com/myapp/backend/repository/TagRepository.class</exclude>
-                        <exclude>com/myapp/backend/repository/TranslatorRepository.class</exclude>
-                        <exclude>com/myapp/backend/mapper/HistoryTranslationMapper.java</exclude>
-                        <exclude>com/myapp/backend/mapper/TagMapper.java</exclude>
-                        <exclude>com/myapp/backend/mapper/TranslatorMapper.java</exclude>
-                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
